--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Flask==3.0.0
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
-python-telegram-bot==20.7
+Flask==2.3.2
+Flask-CORS==4.0.0
+Werkzeug==2.3.6
